--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -298,20 +298,20 @@ spec:
       ref: helm-nvidia-k8s-device-plugin-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
-    - chart: gha-runner-scale-set
-      helm:
-        releaseName: chris-pc-openebs
-        valuesObject:
-          controllerServiceAccount:
-            namespace: github-actions-runner-controller
-            name: github-actions-runner-controller-gha-rs-controller
-          githubConfigSecret: github-config
-          githubConfigUrl: https://github.com/chrismlee42/openebs-config
-          minRunners: 1
-          namespace: github-actions-runner
-      ref: helm-openebs-config
-      repoURL: ghcr.io/actions/actions-runner-controller-charts
-      targetRevision: 0.12.1
+    # - chart: gha-runner-scale-set
+    #   helm:
+    #     releaseName: chris-pc-openebs
+    #     valuesObject:
+    #       controllerServiceAccount:
+    #         namespace: github-actions-runner-controller
+    #         name: github-actions-runner-controller-gha-rs-controller
+    #       githubConfigSecret: github-config
+    #       githubConfigUrl: https://github.com/chrismlee42/openebs-config
+    #       minRunners: 1
+    #       namespace: github-actions-runner
+    #   ref: helm-openebs-config
+    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
+    #   targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
         releaseName: chris-pc-rook
