Add AWX postgres tls secret to ignoreDifferences

--- a/argocd/awx-config-application.yaml
+++ b/argocd/awx-config-application.yaml
@@ -64,3 +64,8 @@ spec:
       namespace: awx
       jsonPointers:
         - /data
+    - kind: Secret
+      name: postgresql-tls
+      namespace: awx
+      jsonPointers:
+        - /data
