--- a/argocd/awx-config-application.yaml
+++ b/argocd/awx-config-application.yaml
@@ -18,6 +18,29 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/awx-config.git
       targetRevision: HEAD
+    - chart: awx-operator
+      helm:
+        releaseName: awx
+        valuesObject:
+          AWX:
+            enabled: true
+            admin_user: admin
+            admin_password_secret: awx-admin-password
+            customSecrets:
+              admin:
+                enabled: true
+                secretName: awx-admin-password
+              secretKey:
+                enabled: true
+                secretName: awx-secret-key
+            name: awx
+            postgres:
+              enabled: false
+            postgres_configuration_secret: awx-postgres-configuration
+            service_type: ClusterIP
+      ref: helm
+      repoURL: https://ansible-community.github.io/awx-operator-helm/
+      targetRevision: 3.2.0
   syncPolicy:
     automated:
       prune: true
