Enable cilium ingress controller

--- a/argocd/cilium-config-application.yaml
+++ b/argocd/cilium-config-application.yaml
@@ -45,7 +45,7 @@ spec:
               enabled: true
           ingressController:
             default: false
-            enabled: false
+            enabled: true
             # loadbalancerMode: shared
           ipam:
             operator:
