Revert "Enable cilium ingress controller"
This reverts commit 2240040093903dc42b541ee5c1f0172ca5e5f056.

--- a/argocd/cilium-config-application.yaml
+++ b/argocd/cilium-config-application.yaml
@@ -45,7 +45,7 @@ spec:
               enabled: true
           ingressController:
             default: false
-            enabled: true
+            enabled: false
             # loadbalancerMode: shared
           ipam:
             operator:
