--- a/argocd/monitoring-application.yaml
+++ b/argocd/monitoring-application.yaml
@@ -5,7 +5,7 @@ metadata:
     app: monitoring
     managedBy: argocd
     managementCodeGroup: chrismlee42
-    managementCodeProject: monitoring
+    managementCodeProject: monitoring-config
   name: monitoring
   namespace: argocd
 spec:
