--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -169,7 +169,7 @@ spec:
           githubConfigUrl: https://github.com/chrismlee42/freeipa-config
           minRunners: 1
           namespace: github-actions-runner
-      ref: helm-gateway-freeipa
+      ref: helm-freeipa-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
     - chart: gha-runner-scale-set
       helm:
