--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -171,6 +171,7 @@ spec:
           namespace: github-actions-runner
       ref: helm-freeipa-config
       repoURL: ghcr.io/actions/actions-runner-controller-charts
+      targetRevision: 0.12.1
     - chart: gha-runner-scale-set
       helm:
         releaseName: chris-pc-gateway
