--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -61,6 +61,7 @@ spec:
       selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
+      - ServerSideApply=true
   ignoreDifferences:
     - group: '*'
       kind: '*'
