--- a/argocd/monitoring-application.yaml
+++ b/argocd/monitoring-application.yaml
@@ -29,5 +29,21 @@ spec:
     automated:
       prune: true
       selfHeal: true
-    # syncOptions:
-    #   - ServerSideApply=true
+    syncOptions:
+      - RespectIgnoreDifferences=true
+      - ServerSideApply=true
+  ignoreDifferences:
+    - group: '*'
+      kind: '*'
+      jqPathExpressions:
+        - |
+          def parsePath(pathStr):
+            (pathStr | split(".")[1:]) as $parts | $parts | map(
+              if test("^\\w+\\[\\d+\\]$") then
+                capture("(?<key>\\w+)\\[(?<index>\\d+)\\]") | [.key, (.index | tonumber)]
+              else
+                [.]
+              end
+            ) | add
+          ;
+          . as $root | .metadata?.annotations?["custom.argocd.argoproj.io/ignore-path"] as $path | $root | getpath(parsePath($path))
