--- a/argocd/monitoring-application.yaml
+++ b/argocd/monitoring-application.yaml
@@ -31,7 +31,7 @@ spec:
       selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
-      - ServerSideApply=true
+      # - ServerSideApply=true
   ignoreDifferences:
     - group: '*'
       kind: '*'
