Revert "Disable gha runner controller deployment via helm in favor of manifest bundle in other repo"
This reverts commit c89f05efc07e93b5c8c828de0f68ce4b38b5754d.

--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -18,14 +18,14 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
       targetRevision: HEAD
-    # - chart: gha-runner-scale-set-controller
-    #   helm:
-    #     releaseName: github-actions-runner-controller
-    #     valuesObject:
-    #       githubConfigSecret: github-config
-    #   ref: helm-controller
-    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
-    #   targetRevision: 0.13.0
+    - chart: gha-runner-scale-set-controller
+      helm:
+        releaseName: github-actions-runner-controller
+        valuesObject:
+          githubConfigSecret: github-config
+      ref: helm-controller
+      repoURL: ghcr.io/actions/actions-runner-controller-charts
+      targetRevision: 0.13.0
   syncPolicy:
     automated:
       prune: true
