Enable server-side apply for GHA runners

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -458,7 +458,7 @@ spec:
       selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
-      # - ServerSideApply=true
+      - ServerSideApply=true
   ignoreDifferences:
     # - group: '*'
     #   kind: '*'
