--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -14,18 +14,18 @@ spec:
     namespace: github-actions-runner-controller
   project: default
   sources:
-    - path: argocd
-      ref: path
-      repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
-      targetRevision: HEAD
-    # - chart: gha-runner-scale-set-controller
-    #   helm:
-    #     releaseName: github-actions-runner-controller
-    #     valuesObject:
-    #       githubConfigSecret: github-config
-    #   ref: helm-controller
-    #   repoURL: ghcr.io/actions/actions-runner-controller-charts
-    #   targetRevision: 0.13.0
+    # - path: argocd
+    #   ref: path
+    #   repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
+    #   targetRevision: HEAD
+    - chart: gha-runner-scale-set-controller
+      helm:
+        releaseName: github-actions-runner-controller
+        valuesObject:
+          githubConfigSecret: github-config
+      ref: helm-controller
+      repoURL: ghcr.io/actions/actions-runner-controller-charts
+      targetRevision: 0.13.0
   syncPolicy:
     automated:
       prune: true
