--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -14,10 +14,10 @@ spec:
     namespace: github-actions-runner-controller
   project: default
   sources:
-    # - path: argocd
-    #   ref: path
-    #   repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
-    #   targetRevision: HEAD
+    - path: argocd
+      ref: path
+      repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
+      targetRevision: HEAD
     - chart: gha-runner-scale-set-controller
       helm:
         releaseName: github-actions-runner-controller
