--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -18,13 +18,13 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
       targetRevision: HEAD
-    - chart: gha-runner-scale-set-controller
+    - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
       helm:
         releaseName: github-actions-runner-controller
         valuesObject:
           githubConfigSecret: github-config
       ref: helm-controller
-      repoURL: ghcr.io/actions/actions-runner-controller-charts
+      repoURL: ghcr.io/actions
       targetRevision: 0.13.1
   syncPolicy:
     automated:
