Correct argocd applications GHA runner controllerServiceAccount

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -23,7 +23,7 @@ spec:
         releaseName: chris-pc-argocd-applications
         valuesObject:
           controllerServiceAccount:
-            namespace: github-actions-runner
+            namespace: github-actions-runner-controller
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
           githubConfigUrl: https://github.com/chrismlee42/argocd-applications
